5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1582_1333.log
== TEST (2019-03-14 17:00:02) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30-3)**2+8//3**(2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:00:31) 
-- CODE:
expressao = (30 – 3) ** 2 + 8 // 3 ** (2 * 10)
print(30-3)**2+8//3**(2*10)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3) ** 2 + 8 // 3 ** (2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:00:51) 
-- CODE:

print(30-3)**2+8//3**(2*10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(30-3)**2+8//3**(2*10)
TypeError: unsupported operand type(s) for ** or pow(): 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:20:32) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print()
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:20:42) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:21:40) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(((30 – 3) ** 2) + 8 // (3 ** 2) * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:21:57) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print((((30 – 3) ** 2) + 8) // (3 ** 2) * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:25:19) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print(((30-3)** 2) + 8 // (3 ** 2) * 10)
-- OUTPUT:
729
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:25:23) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print(((30-3)** 2) + 8 // (3 ** 2) * 10)
-- EXECUTION TIME:
0.154309
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:25:32) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print(((30-3)** 2) + 8 // (3 ** 2) * 10)
-- OUTPUT:
729
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:26:07) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print((((30-3)** 2) + 8) // (3 ** 2) * 10)
-- OUTPUT:
810
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:26:11) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print((((30-3)** 2) + 8) // (3 ** 2) * 10)
-- EXECUTION TIME:
0.288153
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
810
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:26:27) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print(((((30-3)** 2) + 8) // (3 ** 2) * 10))
-- OUTPUT:
810
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:26:31) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10
print(((((30-3)** 2) + 8) // (3 ** 2) * 10))
-- EXECUTION TIME:
0.173099
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
810
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:01:26) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:01:30) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 2 * 10
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.207655
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
